# omx_train_ws

./: .gitignore  README.md  main.py  pyproject.toml
assets/mjcf/turtlebot3_manipulator/: model_manifest.yaml  scene.xml
configs/: arm_grasp_randomized_ppo.yaml  arm_only_delivery_ppo.yaml  robot_limits.yaml  task_pick_place.yaml
docs/: PPO 재학습 기록 2026-07-18.md  PPO 학습 계획.md  PPO 학습 기록.md  모델 학습 1차 결과.md  모델 학습 최종 결과.md
envs/: __init__.py  arm_randomized_grasp_env.py  factory.py
eval/: evaluate_grasp_policy.py
policies/exported/arm_grasp_sim2real/: evaluation_100.yaml  policy_metadata.yaml  training_config.yaml
scripts/: check_gpu_mjx.py  check_grasp_env.py  test_load_model.py  view_grasp_policy.py
test/: test_arm_randomized_grasp_env.py  test_training_metadata.py
train/: pretrain_grasp_bc.py  train_grasp_ppo.py
