[project]
name = "tom-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.14.2",
    "flax>=0.12.7",
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "mujoco>=3.10.0",
    "mujoco-mjx>=3.10.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.12.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.21.0",
    "tqdm>=4.68.4",
]
